Update index.html, script.js, and images

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>luv u maraaaaa</title>
+  <title>luv u billaa chann</title>
   <link rel="stylesheet" href="style.css" />
   <script type="importmap">
     {
